# Class-Work

./: .gitignore
AI/multiagent/: multiAgents.py
AI/proj1-search-python3/: search.py  searchAgents.py
AI/reinforcement/: analysis.py  qlearningAgents.py  valueIterationAgents.py
CS-5305-IntroToDataSci/HW1/: HW1.ipynb
Networking/hw1/: README.md  makefile  port_calc.cpp  todo.md  whoisclient.c  whoisserver.c
Networking/hw2/: client.c  fib.c  makefile  mmap.c  page1.html  page2.html  page3.html  parse_test.c  r.sh  readme  server.c
Networking/hw4/: Makefile  README  client  client.c  logfile  move.sh  mysock.h  mystcp_skeleton.tar  server  server.c  stcp_api.c  test.txt  transfer.h  transport.c
Networking/notes/: congestion_crtl.md  data_plane.txt  tcp.md  tcp_cc.md
WebDev/: .eslintrc.json  HW2_README.txt  index.ts  package-lock.json
WebDev/backend/: package-lock.json  package.json  tsconfig.json
WebDev/express_app/: package.json
WebDev/hw1/: .eslintrc.json  curl_commands.txt  notes.txt  package-lock.json  package.json
WebDev/hw1_ts/: index.js  package.json
WebDev/hw1_xprs_app/: app.ts  data.ts  package-lock.json
WebDev/hw2_xprs_app/: .env  notes.txt  package-lock.json  (+3 more)
WebDev/rust_project/: Cargo.toml  README  delete_comment.sh  get_token.sh  journal.md  login.sh  logout.sh  notes.txt  patch_review.sh  post.sh  post_comment.sh  post_review.sh  run.sh  secret_test.sh  secret_view.sh  signup.sh
WebDev/rust_project/src/: auth.rs  comment.rs  html.rs  jwt.rs  main.rs  middleware.rs  model.rs  review.rs
WebDev/rust_project/src/static/: delete_comment.html  get_comments_by_review.html  get_reviews_by_author.html  get_reviews_by_book.html  login.html  logout.html  patch_review.html  post_comment.html  post_review.html  signup.html
(+107 files in other folders)
