[package]
name = "rust_project"
version = "0.1.0"
edition = "2021"

[dependencies.mongodb]
default-features = false
serde.workspace = true
actix-web.workspace = true
features = ["async-std-runtime"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "4"
futures = "0.3"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "0.9.10" 
reqwest = { version = "0.12.4", features = ["blocking"] } 
