[package]
name = "rust_project"
version = "0.1.0"
edition = "2021"

[dependencies.mongodb]
default-features = false
serde.workspace = true
actix-web.workspace = true
features = ["async-std-runtime"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = { version = "4.6", features = ["cookies"]}
actix-files = "0.6.5"
actix-web-httpauth = "0.8.1"
actix-service = "2.0.2"
futures = "0.3"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.16" 
reqwest = { version = "0.12.4", features = ["blocking"] } 
uuid = { version = "1.8.0",  features = ["v4"] }
alcoholic_jwt = "1.0.1"
jsonwebtoken = "9.3"
chrono = "0.4.38"
